[package]
name = "lnurl-tool"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to encode/decode LNURL strings"
authors = ["0xtr <oxtrr@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/0xtrr/lnurl-tool"
repository = "https://github.com/0xtrr/lnurl-tool"
license = "MIT"
keywords = ["lnurl", "tool", "cli", "bitcoin", "lightning"]
categories = ["command-line-utilities"]

[dependencies]
bech32 = "0.9.1"
clap = { version = "4.3.6", features = ["derive"] }